--- a/templates/greet.html
+++ b/templates/greet.html
@@ -7,15 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <form method="get" action="/greet">
-      <input
-        autocomplete="off"
-        autofocus="true"
-        name="name"
-        placeholder="Jason"
-        type="text"
-      />
-      <input type="submit" />
-    </form>
+    <p>Hello, {{ name }}!</p>
   </body>
 </html>
