--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <form method="get" action="/greet">
-      <input
-        autocomplete="off"
-        autofocus="true"
-        name="name"
-        placeholder="Jason"
-        type="text"
-      />
-      <input type="submit" />
-    </form>
-  </body>
-</html>
+{% extends 'layout.html' %} {% block body %}
+<form method="get" action="/greet">
+  <input
+    autocomplete="off"
+    autofocus="true"
+    name="name"
+    placeholder="Jason"
+    type="text"
+  />
+  <input type="submit" />
+</form>
+{% endblock %}
