--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %} {% block body %}
-<form method="get" action="/greet">
+<form method="post" action="/greet">
   <input
     autocomplete="off"
     autofocus="true"
